@@ -1,0 +1,13 @@
+HOW TO DISABLE AUTHENTICATION
+-----------------------------
+
+If you want to use a component that does not allow authentication you can 
+disable it in the Denodo OData Service. Make sure that you disable the 
+authentication ONLY FOR DEVELOPMENT ENVIRONMENTS.
+
+In order to disable authentication you must modify the web.xml file adding a context parameter:
+
+    <context-param>
+      <param-name>developmentModeDangerousBypassAuthentication</param-name>
+      <param-value>true</param-value>
+    </context-param> 
