@@ -23,8 +23,6 @@ package com.denodo.connect.odata2.filter;
 
 import java.io.IOException;
 import java.io.UnsupportedEncodingException;
-import java.sql.Connection;
-import java.sql.SQLException;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Properties;
@@ -43,16 +41,10 @@ import javax.ws.rs.core.SecurityContext;
 import org.apache.commons.codec.binary.Base64;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.log4j.Logger;
-import org.springframework.jdbc.CannotGetJdbcConnectionException;
-import org.springframework.jdbc.datasource.DataSourceUtils;
 import org.springframework.web.context.WebApplicationContext;
 import org.springframework.web.context.support.WebApplicationContextUtils;
 
 import com.denodo.connect.odata2.datasource.DenodoODataAuthDataSource;
-import com.denodo.connect.odata2.datasource.DenodoODataAuthenticationException;
-import com.denodo.connect.odata2.datasource.DenodoODataAuthorizationException;
-import com.denodo.connect.odata2.datasource.DenodoODataConnectException;
-import com.denodo.connect.odata2.datasource.DenodoODataResourceNotFoundException;
 
 
 public class DenodoODataFilter implements Filter {
@@ -77,6 +69,17 @@ public class DenodoODataFilter implements Filter {
     private DenodoODataAuthDataSource authDataSource = null;
     private boolean allowAdminUser;
     
+    /*
+     * Property that ONLY should be true in development mode, 
+     * NEVER IN PRODUCTION ENVIRONMENTS. It is useful in order 
+     * to use the service with components that do not allow 
+     * authentication and in this situation the web.xml file
+     * must be modified to add the property and then
+     * the service will use the credentials included in the 
+     * data source configuration (JNDI resource).
+     */
+    private String developmentModeDangerousBypassAuthentication;
+    
     public DenodoODataFilter() {
         super();
     }
@@ -86,6 +89,7 @@ public class DenodoODataFilter implements Filter {
     @Override
     public void init(final FilterConfig filterConfig) throws ServletException {
         this.servletContext = filterConfig.getServletContext();
+        this.developmentModeDangerousBypassAuthentication = this.servletContext.getInitParameter("developmentModeDangerousBypassAuthentication");
     }
 
 
@@ -140,32 +144,41 @@ public class DenodoODataFilter implements Filter {
         
         final HttpServletRequest request = (HttpServletRequest) req;
         final HttpServletResponse response = (HttpServletResponse) res;
-
-        // Check request header contains BASIC AUTH segment
-        final String authorizationHeader = request.getHeader(AUTH_KEYWORD);
-        if (authorizationHeader == null || !StringUtils.startsWithIgnoreCase(authorizationHeader, BASIC_AUTH_KEYWORD)) {
-            String reason = "HTTP request does not contain AUTH segment";
-            logger.trace(reason);
-            showLogin(response, reason);
-            return;
-        }
-
-        // Retrieve credentials
-        final String[] credentials = retrieveCredentials(authorizationHeader);
-        if (credentials == null) {
-            String reason = "Invalid credentials";
-            logger.trace(reason);
-            showLogin(response, reason);
-            return;
+        
+        String login = null;
+        String password = null;
+        
+        if (!Boolean.valueOf(this.developmentModeDangerousBypassAuthentication).booleanValue()) {
+            // Check request header contains BASIC AUTH segment
+            final String authorizationHeader = request.getHeader(AUTH_KEYWORD);
+            if (authorizationHeader == null || !StringUtils.startsWithIgnoreCase(authorizationHeader, BASIC_AUTH_KEYWORD)) {
+                String reason = "HTTP request does not contain AUTH segment";
+                logger.trace(reason);
+                showLogin(response, reason);
+                return;
+            }
+    
+            // Retrieve credentials
+            String[] credentials = retrieveCredentials(authorizationHeader);
+            if (credentials == null) {
+                String reason = "Invalid credentials";
+                logger.trace(reason);
+                showLogin(response, reason);
+                return;
+            }
+            
+            // Disable access to the service using 'admin' user if this option is established in the configuration
+            if (!this.allowAdminUser && adminUser.equals(credentials[0])) {
+                String reason = "Invalid user. The access to the service is not allowed with the 'admin' user.";
+                logger.trace(reason);
+                showLogin(response, reason);
+                return;
+            }
+            
+            login = credentials[0];
+            password = credentials[1];
         }
         
-        // Disable access to the service using 'admin' user if this option is established in the configuration
-        if (!this.allowAdminUser && adminUser.equals(credentials[0])) {
-            String reason = "Invalid user. The access to the service is not allowed with the 'admin' user.";
-            logger.trace(reason);
-            showLogin(response, reason);
-            return;
-        }
 
         final String dataBaseName = retrieveDataBaseNameFromUrl(request.getRequestURL().toString(), this.serverAddress);
 
@@ -174,10 +187,11 @@ public class DenodoODataFilter implements Filter {
             return;
         }
 
-        final UserAuthenticationInfo userAuthInfo = new UserAuthenticationInfo(credentials[0], credentials[1], dataBaseName);
+        final UserAuthenticationInfo userAuthInfo = new UserAuthenticationInfo(login, password, dataBaseName);
 
+        
         // Set connection parameters
-        this.authDataSource.setParameters(DenodoODataFilter.fillParametersMap(userAuthInfo));
+        this.authDataSource.setParameters(fillParametersMap(userAuthInfo));
 
         logger.trace("Acquired data source: " + this.authDataSource);
 
@@ -237,11 +251,22 @@ public class DenodoODataFilter implements Filter {
      * @param userAuthenticationInfo required user/pass to access a data base.
      * @return
      */
-    private static Map<String,String> fillParametersMap(final UserAuthenticationInfo userAuthenticationInfo){
+    private Map<String,String> fillParametersMap(final UserAuthenticationInfo userAuthenticationInfo){
         final Map<String,String> parameters = new HashMap<String,String>();
         parameters.put(DenodoODataAuthDataSource.DATA_BASE_NAME, userAuthenticationInfo.getDatabaseName());
         parameters.put(DenodoODataAuthDataSource.USER_NAME, userAuthenticationInfo.getLogin());
         parameters.put(DenodoODataAuthDataSource.PASSWORD_NAME, userAuthenticationInfo.getPassword());
+        
+        /*
+         * Property that ONLY should be true in development mode, 
+         * NEVER IN PRODUCTION ENVIRONMENTS. It is useful in order 
+         * to use the service with components that do not allow 
+         * authentication and in this situation the web.xml file
+         * must be modified to add the property and then
+         * the service will use the credentials included in the 
+         * data source configuration (JNDI resource).
+         */
+        parameters.put(DenodoODataAuthDataSource.DEVELOPMENT_MODE_DANGEROUS_BYPASS_AUTHENTICATION, this.developmentModeDangerousBypassAuthentication);
 
         return parameters;
     }
